# FlowRAG-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  orchestrator.py  router.py
agent/callbacks/: __init__.py  streamlit_callback.py
agent/runtime/: __init__.py  context.py  history.py  requests.py  runtime.py  session.py  trace.py
agent/skills/: __init__.py  base.py  registry.py
agent/tools/: __init__.py  doc_loader.py  retriever.py
agent/workflows/: __init__.py  analyze.py  base.py  common.py  qa.py  summarize.py
app/: __init__.py  streamlit_app.py
config/: __init__.py  env_bootstrap.py  prompts.py  settings.py
docs/: ARCHITECTURE.md  METADATA_SCHEMA.md  MODULE_MAP.md
evaluation/: README.md  __init__.py  harness.py  runner.py
evaluation/datasets/: __init__.py  contract_benchmark.py  fake_responses.py  loader.py  schema.py
evaluation/metrics/: __init__.py  generation.py  report.py  retrieval.py
evaluation/reports/: .gitignore
ingestion/: __init__.py  chunker.py  embedder.py  indexer.py  pdf_parser.py  utils.py
llm/: __init__.py  factory.py
mcp_server/: __init__.py  resources.py  server.py  tools.py
memory/: __init__.py  base.py  history_format.py  in_memory_store.py  manager.py  storage_interface.py
models/: __init__.py  doc_registry.py  schemas.py
retrieval/: __init__.py  chroma_store.py  chunk_utils.py  citation_builder.py  rag_service.py  retriever_factory.py
scripts/: __init__.py  ingest_cli.py  reset_db.py  verify_mcp.py
skills/: __init__.py  base.py  context.py  helpers.py  registry.py
skills/analysis_skill/: __init__.py  skill.py
skills/qa_skill/: __init__.py  skill.py
skills/summary_skill/: __init__.py  skill.py
tests/: README.md  __init__.py  conftest.py  test_agent_workflows.py  test_chunker.py  test_citation_builder.py  test_doc_registry.py  test_pdf_parser.py  test_rag_pipeline.py  test_retriever.py  test_router.py
tests/e2e/: test_agent_pipeline.py
tests/evaluation/: test_evaluation.py
tests/examples/: __init__.py  test_rag_usage_examples.py
tests/fixtures/: __init__.py  (+2 more)
tools/: __init__.py  analyze_tool.py  base.py  citation_tool.py  context.py  doc_loader.py  generator_tool.py  rag_tool.py  registry.py  retriever.py  search_document_tool.py  summarize_tool.py
ui/: __init__.py  state.py
(+23 files in other folders)
